// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`measureEncoding 1`] = `
{
  "annotation": {},
  "chartType": "scatter",
  "config": {
    "scatter": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairLine": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "lineColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "scatter": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairLine": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "lineColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    [
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 210000,
        "__MeaYValue__0": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 220000,
        "__MeaYValue__0": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 230000,
        "__MeaYValue__0": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 340000,
        "__MeaYValue__0": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 450000,
        "__MeaYValue__0": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 560000,
        "__MeaYValue__0": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 110000,
        "__MeaYValue__0": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 320000,
        "__MeaYValue__0": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 430000,
        "__MeaYValue__0": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 540000,
        "__MeaYValue__0": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 250000,
        "__MeaYValue__0": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 610000,
        "__MeaYValue__0": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
    ],
    [
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 210000,
        "__MeaYValue__1": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 220000,
        "__MeaYValue__1": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 230000,
        "__MeaYValue__1": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 340000,
        "__MeaYValue__1": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 450000,
        "__MeaYValue__1": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 560000,
        "__MeaYValue__1": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 110000,
        "__MeaYValue__1": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 320000,
        "__MeaYValue__1": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 430000,
        "__MeaYValue__1": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 540000,
        "__MeaYValue__1": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 250000,
        "__MeaYValue__1": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 610000,
        "__MeaYValue__1": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
    ],
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "profit": "Profit",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          110000,
          610000,
        ],
        "measureValue": "__MeaXValue__0",
      },
      "foldInfoList": [
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "profit": "Profit",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            110000,
            610000,
          ],
          "measureValue": "__MeaXValue__0",
        },
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "sales": "Sales",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            200000,
            1200000,
          ],
          "measureValue": "__MeaYValue__0",
        },
      ],
      "id": "scatter-0",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-Profit": "2019-Profit",
          "2019-Sales": "2019-Sales",
          "2020-Profit": "2020-Profit",
          "2020-Sales": "2020-Sales",
        },
        "colorItems": [
          "2019-Profit",
          "2020-Profit",
          "2019-Sales",
          "2020-Sales",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "profit": "Profit",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          110000,
          610000,
        ],
        "measureValue": "__MeaXValue__1",
      },
      "foldInfoList": [
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "profit": "Profit",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            110000,
            610000,
          ],
          "measureValue": "__MeaXValue__1",
        },
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "sales": "Sales",
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            200000,
            1200000,
          ],
          "measureValue": "__MeaYValue__1",
        },
      ],
      "id": "scatter-1",
      "index": 1,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-Profit": "2019-Profit",
          "2019-Sales": "2019-Sales",
          "2020-Profit": "2020-Profit",
          "2020-Sales": "2020-Sales",
        },
        "colorItems": [
          "2019-Profit",
          "2020-Profit",
          "2019-Sales",
          "2020-Sales",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "Yearn",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "year",
      "__MeaName__",
    ],
    "detail": [
      "__MeaName__",
      "year",
    ],
    "x": [
      "month",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "chart1-ProfitSales",
      "children": [
        {
          "alias": "Profit",
          "children": [
            {
              "alias": "Profit",
              "encoding": "xAxis",
              "id": "profit",
              "parentId": "chart1",
            },
          ],
          "id": "0-x",
        },
        {
          "alias": "Sales",
          "children": [
            {
              "alias": "Sales",
              "encoding": [
                "yAxis",
              ],
              "id": "sales",
              "parentId": "chart1",
            },
          ],
          "id": "0-y",
        },
      ],
      "id": "chart1-ProfitSales",
    },
    {
      "alias": "chart2-ProfitSales",
      "children": [
        {
          "alias": "Profit",
          "children": [
            {
              "alias": "Profit",
              "encoding": "xAxis",
              "id": "profit",
              "parentId": "chart2",
            },
          ],
          "id": "1-x",
        },
        {
          "alias": "Sales",
          "children": [
            {
              "alias": "Sales",
              "encoding": "yAxis",
              "id": "sales",
              "parentId": "chart2",
            },
          ],
          "id": "1-y",
        },
      ],
      "id": "chart2-ProfitSales",
    },
  ],
}
`;

exports[`measureEncoding 2`] = `
{
  "animation": true,
  "columns": [],
  "heightMode": "adaptive",
  "indicators": [
    {
      "cellType": "chart",
      "chartModule": "vchart",
      "chartSpec": {
        "animation": true,
        "axes": [
          {
            "base": 10,
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": true,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": true,
            },
            "innerOffset": {
              "right": 7,
            },
            "inverse": false,
            "label": {
              "formatMethod": [Function],
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "visible": true,
            },
            "max": undefined,
            "min": undefined,
            "nice": true,
            "orient": "bottom",
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "linear",
            "visible": true,
            "zero": true,
          },
          {
            "base": 10,
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": true,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": true,
            },
            "innerOffset": {
              "top": 7,
            },
            "inverse": false,
            "label": {
              "formatMethod": [Function],
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "visible": true,
            },
            "max": undefined,
            "min": undefined,
            "nice": true,
            "orient": "left",
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "linear",
            "visible": true,
            "zero": true,
          },
        ],
        "background": "transparent",
        "color": {
          "domain": [
            "2019-Profit",
            "2020-Profit",
            "2019-Sales",
            "2020-Sales",
          ],
          "range": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "specified": undefined,
          "type": "ordinal",
        },
        "crosshair": {
          "xField": {
            "label": {
              "labelBackground": {
                "style": {
                  "fill": "#364159",
                },
                "visible": true,
              },
              "style": {
                "fill": "#ffffff",
              },
              "visible": true,
            },
            "line": {
              "style": {
                "lineDash": [
                  4,
                  2,
                ],
                "lineWidth": 1,
                "opacity": 1,
                "stroke": "#3641594d",
              },
              "type": "line",
            },
            "visible": true,
          },
          "yField": {
            "label": {
              "labelBackground": {
                "style": {
                  "fill": "#364159",
                },
                "visible": true,
              },
              "style": {
                "fill": "#ffffff",
              },
              "visible": true,
            },
            "line": {
              "style": {
                "lineDash": [
                  4,
                  2,
                ],
                "lineWidth": 1,
                "opacity": 1,
                "stroke": "#3641594d",
              },
              "type": "line",
            },
            "visible": true,
          },
        },
        "data": {
          "fields": {},
          "id": "scatter-0",
          "values": undefined,
        },
        "direction": "vertical",
        "label": {
          "formatMethod": [Function],
          "visible": true,
        },
        "padding": 0,
        "point": {
          "state": {
            "hover": {
              "fillOpacity": 0.6,
              "lineWidth": 1,
              "scaleX": 1.4,
              "scaleY": 1.4,
              "stroke": [Function],
            },
          },
          "style": {},
        },
        "region": [
          {
            "clip": true,
          },
        ],
        "seriesField": "__Dim_ColorId__",
        "tooltip": {
          "dimension": {
            "content": [
              {
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
            ],
          },
          "mark": {
            "content": [
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "value": [Function],
                "visible": true,
              },
            ],
            "title": {
              "visible": true,
            },
          },
          "visible": true,
        },
        "type": "scatter",
        "xField": "__MeaXValue__0",
        "yField": "__MeaYValue__0",
      },
      "indicatorKey": "scatter-0",
      "style": {
        "padding": [
          1,
          1,
          0,
          1,
        ],
      },
      "title": undefined,
    },
    {
      "cellType": "chart",
      "chartModule": "vchart",
      "chartSpec": {
        "animation": true,
        "axes": [
          {
            "base": 10,
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": true,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": true,
            },
            "innerOffset": {
              "right": 7,
            },
            "inverse": false,
            "label": {
              "formatMethod": [Function],
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "visible": true,
            },
            "max": undefined,
            "min": undefined,
            "nice": true,
            "orient": "bottom",
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "linear",
            "visible": true,
            "zero": true,
          },
          {
            "base": 10,
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": true,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": true,
            },
            "innerOffset": {
              "top": 7,
            },
            "inverse": false,
            "label": {
              "formatMethod": [Function],
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "visible": true,
            },
            "max": undefined,
            "min": undefined,
            "nice": true,
            "orient": "left",
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "linear",
            "visible": true,
            "zero": true,
          },
        ],
        "background": "transparent",
        "color": {
          "domain": [
            "2019-Profit",
            "2020-Profit",
            "2019-Sales",
            "2020-Sales",
          ],
          "range": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "specified": undefined,
          "type": "ordinal",
        },
        "crosshair": {
          "xField": {
            "label": {
              "labelBackground": {
                "style": {
                  "fill": "#364159",
                },
                "visible": true,
              },
              "style": {
                "fill": "#ffffff",
              },
              "visible": true,
            },
            "line": {
              "style": {
                "lineDash": [
                  4,
                  2,
                ],
                "lineWidth": 1,
                "opacity": 1,
                "stroke": "#3641594d",
              },
              "type": "line",
            },
            "visible": true,
          },
          "yField": {
            "label": {
              "labelBackground": {
                "style": {
                  "fill": "#364159",
                },
                "visible": true,
              },
              "style": {
                "fill": "#ffffff",
              },
              "visible": true,
            },
            "line": {
              "style": {
                "lineDash": [
                  4,
                  2,
                ],
                "lineWidth": 1,
                "opacity": 1,
                "stroke": "#3641594d",
              },
              "type": "line",
            },
            "visible": true,
          },
        },
        "data": {
          "fields": {},
          "id": "scatter-1",
          "values": undefined,
        },
        "direction": "vertical",
        "label": {
          "formatMethod": [Function],
          "visible": true,
        },
        "padding": 0,
        "point": {
          "state": {
            "hover": {
              "fillOpacity": 0.6,
              "lineWidth": 1,
              "scaleX": 1.4,
              "scaleY": 1.4,
              "stroke": [Function],
            },
          },
          "style": {},
        },
        "region": [
          {
            "clip": true,
          },
        ],
        "seriesField": "__Dim_ColorId__",
        "tooltip": {
          "dimension": {
            "content": [
              {
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
            ],
          },
          "mark": {
            "content": [
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "value": [Function],
                "visible": true,
              },
            ],
            "title": {
              "visible": true,
            },
          },
          "visible": true,
        },
        "type": "scatter",
        "xField": "__MeaXValue__1",
        "yField": "__MeaYValue__1",
      },
      "indicatorKey": "scatter-1",
      "style": {
        "padding": [
          1,
          1,
          0,
          1,
        ],
      },
      "title": undefined,
    },
  ],
  "indicatorsAsCol": false,
  "legends": {
    "data": [
      {
        "label": "2019-Profit",
        "shape": {
          "fill": "#8D72F6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#8D72F6",
          },
        },
      },
      {
        "label": "2020-Profit",
        "shape": {
          "fill": "#5766EC",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#5766EC",
          },
        },
      },
      {
        "label": "2019-Sales",
        "shape": {
          "fill": "#66A3FE",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#66A3FE",
          },
        },
      },
      {
        "label": "2020-Sales",
        "shape": {
          "fill": "#51D5E6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#51D5E6",
          },
        },
      },
    ],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "records": {
    "scatter-0": [
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 210000,
        "__MeaYValue__0": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 220000,
        "__MeaYValue__0": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 230000,
        "__MeaYValue__0": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 340000,
        "__MeaYValue__0": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 450000,
        "__MeaYValue__0": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 560000,
        "__MeaYValue__0": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 110000,
        "__MeaYValue__0": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 320000,
        "__MeaYValue__0": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 430000,
        "__MeaYValue__0": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 540000,
        "__MeaYValue__0": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 250000,
        "__MeaYValue__0": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__0": 610000,
        "__MeaYValue__0": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
    ],
    "scatter-1": [
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 210000,
        "__MeaYValue__1": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 220000,
        "__MeaYValue__1": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 230000,
        "__MeaYValue__1": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 340000,
        "__MeaYValue__1": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 450000,
        "__MeaYValue__1": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 560000,
        "__MeaYValue__1": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 110000,
        "__MeaYValue__1": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 320000,
        "__MeaYValue__1": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 430000,
        "__MeaYValue__1": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 540000,
        "__MeaYValue__1": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 250000,
        "__MeaYValue__1": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaXValue__1": 610000,
        "__MeaYValue__1": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
    ],
  },
  "rows": [],
  "theme": {
    "bodyStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": [
        0,
        0,
        2,
        0,
      ],
      "hover": {
        "cellBgColor": "transparent",
      },
      "padding": [
        0,
        0,
        1,
        0,
      ],
    },
    "bottomFrozenStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerHeaderStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": [
        0,
        0,
        0,
        0,
      ],
      "color": "#333333",
      "fontSize": 12,
      "fontWeight": "bold",
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
      "textAlign": "center",
    },
    "cornerLeftBottomCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerRightBottomCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerRightTopCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "frameStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderLineWidth": 0,
    },
    "headerStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "color": "#333333",
      "fontSize": 12,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
      "textAlign": "center",
    },
    "rightFrozenStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "rowHeaderStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "color": "#333333",
      "fontSize": 12,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "selectionStyle": {
      "cellBgColor": "",
      "cellBorderColor": "",
    },
    "underlayBackgroundColor": "rgba(0,0,0,0)",
  },
  "widthMode": "adaptive",
}
`;
